--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -28,11 +28,11 @@ body {
   font-size: 6.4rem;
 }
 .display-2 {
-  font-family: 'Rubik', sans-serif;
-  font-size: 3rem;
+  font-family: 'Press Start 2P', display;
+  font-size: 1.2rem;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.8rem;
+  font-size: 1.92rem;
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
@@ -67,9 +67,9 @@ body {
     line-height: calc( 1.4 * (2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.4rem;
-    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.96rem;
+    font-size: calc( 1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.8rem;
@@ -1396,450 +1396,4 @@ body {
 }
 .cid-roYpHXbB5d {
   background-image: url("../../../assets/images/xeno-2000x1134.jpg");
-}
-.cid-roYsjZpJLB {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  position: relative;
-  background-color: #000000;
-}
-.cid-roYsjZpJLB .card {
-  border-radius: 0px;
-  margin-bottom: -1px;
-}
-.cid-roYsjZpJLB .card .card-header {
-  border-radius: 0px;
-  border: 0px;
-  padding: 0;
-}
-.cid-roYsjZpJLB .card .card-header a.panel-title {
-  margin-bottom: 0;
-  font-style: normal;
-  font-weight: 500;
-  display: block;
-  text-decoration: none !important;
-  margin-top: -1px;
-  line-height: normal;
-}
-.cid-roYsjZpJLB .card .card-header a.panel-title:focus {
-  text-decoration: none !important;
-}
-.cid-roYsjZpJLB .card .card-header a.panel-title h4 {
-  padding: 1.3rem 2rem;
-  border: 1px solid #dfdfdf;
-  margin-bottom: 0;
-}
-.cid-roYsjZpJLB .card .card-header a.panel-title h4 .sign {
-  padding-right: 1rem;
-}
-.cid-roYsjZpJLB .card .panel-body {
-  color: #767676;
-}
-.cid-roYsjZpJLB H4 {
-  color: #767676;
-}
-.cid-roYrHj6uLJ .navbar {
-  padding: .5rem 0;
-  background: #333333;
-  transition: none;
-  min-height: 77px;
-}
-.cid-roYrHj6uLJ .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
-}
-.cid-roYrHj6uLJ a {
-  font-style: normal;
-}
-.cid-roYrHj6uLJ .nav-item span {
-  padding-right: 0.4em;
-  line-height: 0.5em;
-  vertical-align: text-bottom;
-  position: relative;
-  text-decoration: none;
-}
-.cid-roYrHj6uLJ .nav-item a {
-  display: -webkit-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.7rem 0 !important;
-  margin: 0rem .65rem !important;
-  -webkit-align-items: center;
-  -webkit-justify-content: center;
-}
-.cid-roYrHj6uLJ .nav-item:focus,
-.cid-roYrHj6uLJ .nav-link:focus {
-  outline: none;
-}
-.cid-roYrHj6uLJ .btn {
-  padding: 0.4rem 1.5rem;
-  display: -webkit-inline-flex;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-roYrHj6uLJ .btn .mbr-iconfont {
-  font-size: 1.6rem;
-}
-.cid-roYrHj6uLJ .menu-logo {
-  margin-right: auto;
-}
-.cid-roYrHj6uLJ .menu-logo .navbar-brand {
-  display: flex;
-  margin-left: 5rem;
-  padding: 0;
-  transition: padding .2s;
-  min-height: 3.8rem;
-  -webkit-align-items: center;
-  align-items: center;
-}
-.cid-roYrHj6uLJ .menu-logo .navbar-brand .navbar-caption-wrap {
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  word-break: break-word;
-  min-width: 7rem;
-  margin: .3rem 0;
-}
-.cid-roYrHj6uLJ .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
-  line-height: 1.2rem !important;
-  padding-right: 2rem;
-}
-.cid-roYrHj6uLJ .menu-logo .navbar-brand .navbar-logo {
-  font-size: 4rem;
-  transition: font-size 0.25s;
-}
-.cid-roYrHj6uLJ .menu-logo .navbar-brand .navbar-logo img {
-  display: flex;
-}
-.cid-roYrHj6uLJ .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
-  transition: font-size 0.25s;
-}
-.cid-roYrHj6uLJ .menu-logo .navbar-brand .navbar-logo a {
-  display: inline-flex;
-}
-.cid-roYrHj6uLJ .navbar-toggleable-sm .navbar-collapse {
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  padding-right: 5rem;
-  width: auto;
-}
-.cid-roYrHj6uLJ .navbar-toggleable-sm .navbar-collapse .navbar-nav {
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  padding-left: 0;
-}
-.cid-roYrHj6uLJ .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
-  -webkit-align-self: center;
-  align-self: center;
-}
-.cid-roYrHj6uLJ .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
-  padding-left: 0;
-  padding-bottom: 0;
-}
-.cid-roYrHj6uLJ .dropdown .dropdown-menu {
-  background: #333333;
-  display: none;
-  position: absolute;
-  min-width: 5rem;
-  padding-top: 1.4rem;
-  padding-bottom: 1.4rem;
-  text-align: left;
-}
-.cid-roYrHj6uLJ .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
-}
-.cid-roYrHj6uLJ .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-roYrHj6uLJ .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-}
-.cid-roYrHj6uLJ .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-roYrHj6uLJ .navbar-toggleable-sm.opened:after {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  content: '';
-  background-color: rgba(0, 0, 0, 0.1);
-  left: 0;
-  bottom: 0;
-  transform: translateY(100%);
-  -webkit-transform: translateY(100%);
-  z-index: 1000;
-}
-.cid-roYrHj6uLJ .navbar.navbar-short {
-  min-height: 60px;
-  transition: all .2s;
-}
-.cid-roYrHj6uLJ .navbar.navbar-short .navbar-toggler-right {
-  top: 20px;
-}
-.cid-roYrHj6uLJ .navbar.navbar-short .navbar-logo a {
-  font-size: 2.5rem !important;
-  line-height: 2.5rem;
-  transition: font-size 0.25s;
-}
-.cid-roYrHj6uLJ .navbar.navbar-short .navbar-logo a .mbr-iconfont {
-  font-size: 2.5rem !important;
-}
-.cid-roYrHj6uLJ .navbar.navbar-short .navbar-logo a img {
-  height: 3rem !important;
-}
-.cid-roYrHj6uLJ .navbar.navbar-short .navbar-brand {
-  min-height: 3rem;
-}
-.cid-roYrHj6uLJ button.navbar-toggler {
-  width: 31px;
-  height: 18px;
-  cursor: pointer;
-  transition: all .2s;
-  top: 1.5rem;
-  right: 1rem;
-}
-.cid-roYrHj6uLJ button.navbar-toggler:focus {
-  outline: none;
-}
-.cid-roYrHj6uLJ button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #ffffff;
-}
-.cid-roYrHj6uLJ button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-roYrHj6uLJ button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-roYrHj6uLJ button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-roYrHj6uLJ button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-roYrHj6uLJ nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-roYrHj6uLJ nav.opened .hamburger span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-roYrHj6uLJ nav.opened .hamburger span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-roYrHj6uLJ nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-roYrHj6uLJ .collapsed.navbar-expand {
-  flex-direction: column;
-  -webkit-flex-direction: column;
-}
-.cid-roYrHj6uLJ .collapsed .btn {
-  display: -webkit-flex;
-}
-.cid-roYrHj6uLJ .collapsed .navbar-collapse {
-  display: none !important;
-  padding-right: 0 !important;
-}
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.collapsing,
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.show {
-  display: block !important;
-}
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.collapsing .navbar-nav,
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.show .navbar-nav {
-  display: block;
-  text-align: center;
-}
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.show .navbar-nav .nav-item {
-  clear: both;
-}
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.collapsing .navbar-buttons,
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.show .navbar-buttons {
-  text-align: center;
-}
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
-.cid-roYrHj6uLJ .collapsed .navbar-collapse.show .navbar-buttons:last-child {
-  margin-bottom: 1rem;
-}
-.cid-roYrHj6uLJ .collapsed button.navbar-toggler {
-  display: block;
-}
-.cid-roYrHj6uLJ .collapsed .navbar-brand {
-  margin-left: 1rem !important;
-}
-.cid-roYrHj6uLJ .collapsed .navbar-toggleable-sm {
-  flex-direction: column;
-  -webkit-flex-direction: column;
-}
-.cid-roYrHj6uLJ .collapsed .dropdown .dropdown-menu {
-  width: 100%;
-  text-align: center;
-  position: relative;
-  opacity: 0;
-  overflow: hidden;
-  display: block;
-  height: 0;
-  visibility: hidden;
-  padding: 0;
-  transition-duration: .5s;
-  transition-property: opacity,padding,height;
-}
-.cid-roYrHj6uLJ .collapsed .dropdown.open > .dropdown-menu {
-  position: relative;
-  opacity: 1;
-  height: auto;
-  padding: 1.4rem 0;
-  visibility: visible;
-}
-.cid-roYrHj6uLJ .collapsed .dropdown .dropdown-submenu {
-  left: 0;
-  text-align: center;
-  width: 100%;
-}
-.cid-roYrHj6uLJ .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-  margin-top: 0;
-  position: inherit;
-  right: 0;
-  top: 50%;
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: .3em;
-  vertical-align: middle;
-  content: "";
-  border-top: .30em solid;
-  border-right: .30em solid transparent;
-  border-left: .30em solid transparent;
-}
-@media (max-width: 991px) {
-  .cid-roYrHj6uLJ .navbar-expand {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-roYrHj6uLJ img {
-    height: 3.8rem !important;
-  }
-  .cid-roYrHj6uLJ .btn {
-    display: -webkit-flex;
-  }
-  .cid-roYrHj6uLJ button.navbar-toggler {
-    display: block;
-  }
-  .cid-roYrHj6uLJ .navbar-brand {
-    margin-left: 1rem !important;
-  }
-  .cid-roYrHj6uLJ .navbar-toggleable-sm {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-roYrHj6uLJ .navbar-collapse {
-    display: none !important;
-    padding-right: 0 !important;
-  }
-  .cid-roYrHj6uLJ .navbar-collapse.collapsing,
-  .cid-roYrHj6uLJ .navbar-collapse.show {
-    display: block !important;
-  }
-  .cid-roYrHj6uLJ .navbar-collapse.collapsing .navbar-nav,
-  .cid-roYrHj6uLJ .navbar-collapse.show .navbar-nav {
-    display: block;
-    text-align: center;
-  }
-  .cid-roYrHj6uLJ .navbar-collapse.collapsing .navbar-nav .nav-item,
-  .cid-roYrHj6uLJ .navbar-collapse.show .navbar-nav .nav-item {
-    clear: both;
-  }
-  .cid-roYrHj6uLJ .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-roYrHj6uLJ .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-roYrHj6uLJ .navbar-collapse.collapsing .navbar-buttons,
-  .cid-roYrHj6uLJ .navbar-collapse.show .navbar-buttons {
-    text-align: center;
-  }
-  .cid-roYrHj6uLJ .navbar-collapse.collapsing .navbar-buttons:last-child,
-  .cid-roYrHj6uLJ .navbar-collapse.show .navbar-buttons:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-roYrHj6uLJ .dropdown .dropdown-menu {
-    width: 100%;
-    text-align: center;
-    position: relative;
-    opacity: 0;
-    overflow: hidden;
-    display: block;
-    height: 0;
-    visibility: hidden;
-    padding: 0;
-    transition-duration: .5s;
-    transition-property: opacity,padding,height;
-  }
-  .cid-roYrHj6uLJ .dropdown.open > .dropdown-menu {
-    position: relative;
-    opacity: 1;
-    height: auto;
-    padding: 1.4rem 0;
-    visibility: visible;
-  }
-  .cid-roYrHj6uLJ .dropdown .dropdown-submenu {
-    left: 0;
-    text-align: center;
-    width: 100%;
-  }
-  .cid-roYrHj6uLJ .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-    margin-top: 0;
-    position: inherit;
-    right: 0;
-    top: 50%;
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: .3em;
-    vertical-align: middle;
-    content: "";
-    border-top: .30em solid;
-    border-right: .30em solid transparent;
-    border-left: .30em solid transparent;
-  }
-}
-@media (min-width: 767px) {
-  .cid-roYrHj6uLJ .menu-logo {
-    flex-shrink: 0;
-    -webkit-flex-shrink: 0;
-  }
-}
-.cid-roYrHj6uLJ .navbar-collapse {
-  flex-basis: auto;
-  -webkit-flex-basis: auto;
-}
-.cid-roYrHj6uLJ .nav-link:hover,
-.cid-roYrHj6uLJ .dropdown-item:hover {
-  color: #c1c1c1 !important;
-}
-.cid-roYrXSFuhA {
-  background-image: url("../../../assets/images/background4.jpg");
 }
